--- a/app/index.html
+++ b/app/index.html
@@ -14,35 +14,35 @@
     <div class="paint__wrap">
         <div class="paint">
             <div class="first_horizon">
-                <div class="paint__img people1"><img src="img/dest/people1.webp" alt=""></div>
-                <div class="paint__img house3"><img src="img/dest/house3.webp" alt=""></div>
-                <div class="paint__img house1"><img src="img/dest/house1.webp" alt=""></div>
-                <div class="paint__img cloud1"><img src="img/dest/cloud1.webp" alt=""></div>
-                <div class="paint__img balloon2"><img src="img/dest/balloon2.webp" alt=""></div>
+                <div class="paint__img people1"><img src="img/dest/people1.webp" alt="people1"></div>
+                <div class="paint__img house3"><img src="img/dest/house3.webp" alt="house3"></div>
+                <div class="paint__img house1"><img src="img/dest/house1.webp" alt="house1"></div>
+                <div class="paint__img cloud1"><img src="img/dest/cloud1.webp" alt="cloud1"></div>
+                <div class="paint__img balloon2"><img src="img/dest/balloon2.webp" alt="balloon2"></div>
             </div>
 
             <div class="second_horizon">
-                <div class="paint__img birds"><img src="img/dest/birds.webp" alt="fsd"></div>
-                <div class="paint__img cloud4"><img src="img/dest/cloud4.webp" alt=""></div>
-                <div class="paint__img people2"><img src="img/dest/people2.webp" alt=""></div>
-                <div class="paint__img house2"><img src="img/dest/house2.webp" alt=""></div>
-                <div class="paint__img house4"><img src="img/dest/house4.webp" alt=""></div>
-                <div class="paint__img balloon1"><img src="img/dest/balloon1.webp" alt=""></div>
+                <div class="paint__img birds"><img src="img/dest/birds.webp" alt="birds"></div>
+                <div class="paint__img cloud4"><img src="img/dest/cloud4.webp" alt="cloud4"></div>
+                <div class="paint__img people2"><img src="img/dest/people2.webp" alt="people2"></div>
+                <div class="paint__img house2"><img src="img/dest/house2.webp" alt="house2"></div>
+                <div class="paint__img house4"><img src="img/dest/house4.webp" alt="house4"></div>
+                <div class="paint__img balloon1"><img src="img/dest/balloon1.webp" alt="balloon1"></div>
             </div>
 
 
             <div class="third_horizon">
-                <div class="paint__img people4"><img src="img/dest/people4.webp" alt=""></div>
-                <div class="paint__img demon"><img src="img/dest/demon.webp" alt=""></div>
-                <div class="paint__img tower"><img src="img/dest/tower.webp" alt=""></div>
-                <div class="paint__img house5"><img src="img/dest/house5.webp" alt=""></div>
-                <div class="paint__img people3"><img src="img/dest/people3.webp" alt=""></div>
+                <div class="paint__img people4"><img src="img/dest/people4.webp" alt="people4"></div>
+                <div class="paint__img demon"><img src="img/dest/demon.webp" alt="demon"></div>
+                <div class="paint__img tower"><img src="img/dest/tower.webp" alt="tower"></div>
+                <div class="paint__img house5"><img src="img/dest/house5.webp" alt="house5"></div>
+                <div class="paint__img people3"><img src="img/dest/people3.webp" alt="people3"></div>
             </div>
 
             <div class="forth_horizon">
-                <div class="paint__img castle"><img src="img/dest/castle.webp" alt=""></div>
-                <div class="paint__img cloud3"><img src="img/dest/cloud3.webp" alt=""></div>
-                <div class="paint__img tree1"><img src="img/dest/tree1.webp" alt=""></div>
+                <div class="paint__img castle"><img src="img/dest/castle.webp" alt="castle"></div>
+                <div class="paint__img cloud3"><img src="img/dest/cloud3.webp" alt="cloud3"></div>
+                <div class="paint__img tree1"><img src="img/dest/tree1.webp" alt="tree1"></div>
             </div>
         </div>
     </div>
